--- a/styles.css
+++ b/styles.css
@@ -32,12 +32,10 @@ p {
   font-size: 1.5rem;
   line-height: 1.5;
 }
-a:link {
+p > a:link {
   color: var(--orange);
 }
-a:visited {
-  /* color: var(--orange-hover); */
-}
+
 header {
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
