--- a/styles.css
+++ b/styles.css
@@ -259,27 +259,32 @@ nav {
   width: 100%;
   display: grid;
   place-items: center;
+  margin: 2rem;
+}
+h2 {
+  font-size: 4rem;
+  padding: 3rem 0;
 }
 .cards {
   width: 80%;
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
-  margin: 2rem;
+  gap: 3rem;
+  /* margin: 2rem; */
 }
-.cards > div {
-  /* text-align: center; */
+.card {
+  font-size: 1rem;
+  position: relative;
   flex: 1 1 30rem;
   height: 400px;
   border-radius: 15px;
-  padding: 2rem;
+  padding: 3rem;
   transition: all 0.4s;
-  box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.3);
+  border: 2px solid var(--orange);
+
+  box-shadow: inset 0 0 1em var(--orange);
 }
-.cards > div:hover {
-  transform: scale(1.05);
-  box-shadow: -2px 2px 6px rgba(0, 0, 0, 0.5);
-}
+
 .card > p {
   padding-top: 3rem;
 }
