--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,13 @@ html {
   --orange-hover: rgba(252, 108, 17, 0.9);
 }
 
-body {
+header {
   height: 100vh;
   background-image: url('/assets/octo-mimi.jpeg ');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  /* overflow-x: hidden; */
 }
 h1 {
   font-family: 'Raleway', sans-serif;
@@ -36,9 +37,10 @@ p > a:link {
   color: var(--orange);
 }
 
-header {
+.overlay {
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
+
   display: flex;
   flex-direction: column;
   color: var(--orange);
@@ -258,7 +260,8 @@ nav {
   width: 100%;
   display: grid;
   place-items: center;
-  margin: 2rem;
+  padding: 3rem;
+  margin-bottom: 8rem;
 }
 h2 {
   font-size: 4rem;
@@ -283,6 +286,21 @@ h2 {
 
   box-shadow: inset 0 0 1em var(--orange);
 }
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  gap: 20px;
+  align-items: center;
+}
+.gallery > img {
+  max-width: 100%;
+  background: rgb(252, 108, 17);
+}
+.gallery > h2 {
+  display: grid;
+  grid-column: 1/-1;
+  place-items: center;
+}
 
 .card > p {
   padding-top: 3rem;
@@ -293,6 +311,7 @@ footer {
   justify-content: center;
   margin-top: 10rem;
   padding: 4rem;
+  border-top: 1px solid var(--orange);
 }
 footer > * {
   padding: 0 2rem;
