removing border and editing shadow on services cards.

--- a/styles.css
+++ b/styles.css
@@ -282,9 +282,9 @@ h2 {
   border-radius: 15px;
   padding: 3rem;
   transition: all 0.4s;
-  border: 2px solid var(--orange);
+  /* border: 2px solid var(--orange); */
 
-  box-shadow: inset 0 0 1em var(--orange);
+  box-shadow: -2px 2px 8px var(--orange);
 }
 .gallery {
   display: grid;
